# firefly-demo-application

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  automate_workflow.py  aws.py  entrypoint.sh  logging_config.py  main.py  mask_generator.py  pyproject.toml  script.txt  serializers.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ColorPicker.tsx  ImageSelector.tsx  JobStatusDisplay.tsx  Layout.tsx  Spinner.tsx
frontend/src/pages/: AutoTonePage.tsx  CropImagePage.tsx  ExpandImagePage.tsx  HomePage.tsx  RemoveBackgroundPage.tsx  TextToVideoPage.tsx  VideoReframePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
